syntax = "proto3";

package sum;

option java_package = "com.proto.sum";
option java_multiple_files = true;

message Sum {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 sum = 1;
}

message PrimeNumber {
    int32 number = 1;
}

message PrimeNumberRequest {
    PrimeNumber primeNumber = 1;
}

message PrimeNumberResponseStream {
    int32 result = 1;
}

message AvgNumberRequestStream {
    int32 number = 1;
}

message AvgNumberResponse {
    double result = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
    int32 number = 1;
}

service SumService {

    // unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    // unary with deadline
    rpc SumWithDeadline (SumRequest) returns (SumResponse) {};

    // server streaming
    rpc GetPrimeNumberDecomposition(PrimeNumberRequest) returns (stream PrimeNumberResponseStream) {};

    // client streaming
    rpc GetAvgNumber(stream AvgNumberRequestStream) returns (AvgNumberResponse) {}

    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {}
}